# EcomSite

./: CMakeLists.txt  ItemController.cpp  ItemController.h  ItemInfo.cpp  ItemInfo.h  ItemInfoBox.qml  Main.qml  README.md  ShopifyFetcher.pro  ShoppingCart.qml  itemsearch.cpp  itemsearch.h  main.cpp
Logging/: logging.cpp  logging.h
example/: .qmlls.ini  CMakeLists.txt  ImageButton.qml  ItemController.cpp  ItemController.h  ItemInfo.cpp  ItemInfo.h  ItemInfoBox.qml  ItemSearch.cpp  ItemSearch.h  ItemSearchDisplay.qml  Main.qml  SearchField.qml  SearchPannel.qml  ShoppingCart.qml  main.cpp
example/assets/icons/: Stage #3.docx
keys/: ca-key.pem  ca.pem  ca.srl  cert-key.pem  cert.csr  cert.pem  certificate.crt  certificate.srl  fullchain.pem  localhost.crt  localhost.csr  localhost.key  private.key
src/: handleClient.cpp  handleClient.h  httpsServer.cpp  httpsServer.h  index.html  main.cpp  user_auth_mysql  user_auth_mysql.cpp  user_login_json.cpp  webserver.cpp  webserver.h
